GS-3686 Slight tweaks to layout, fix extra spaces in some links, make avatar link to profile

--- a/src/webapp/res/css/topnav.css
+++ b/src/webapp/res/css/topnav.css
@@ -66,7 +66,7 @@
     border-left-style: solid;
     border-left-color: #CCCCCC;
     padding: 0 10px 0 6px;
-    background: url(/res/img/header/arrowGreenRight.gif) right no-repeat;
+    background: url(/res/img/header/arrowGreenRight.gif) right 5px no-repeat;
 }
 
 #topnav #communityHeader span.headerAccount {
@@ -92,7 +92,7 @@
 #topnav #communityHeader span.headerAvatar {
     position: absolute;
     width: 30px;
-    height: 29px;
+    height: 31px;
     top: 0;
     right: 0;
     _right: 16px;
